test/programs/good/check-terms-precedence/gate_followed_by_let_simple.lq
fun :: Qbit
fun = gate H (let var = term in term')
