test/programs/bad/gates_not_supported.lq
fun1 :: Qbit
fun1 = gate HH (aa bb)
